Foto de perfil. Subir archivo, borrar anterior, visualizarlo, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@
 /public/bundles/
 /var/
 /vendor/
+/public/images/profile_photos/*
+!/public/images/profile_photos/default_profile_photo.PNG
 ###< symfony/framework-bundle ###
